Fix stretched logo in safari

--- a/resources/public/css/_theming.scss
+++ b/resources/public/css/_theming.scss
@@ -16,7 +16,6 @@
 
 .theming-enabled {
   .theme-logo {
-    @extend .h-100;
     display: inline;
   }
 
